tests/baselines/reference/typeValueConflict2.errors.txt
typeValueConflict2.ts(10,24): error TS2339: Property 'A' does not exist on type 'number'.


==== typeValueConflict2.ts (1 errors) ====
    namespace M1 {
        export class A<T> {
            constructor(a: T) {
            }
        }
    }
    namespace M2 {
        var M1 = 0;
        // Should error.  M1 should bind to the variable, not to the module.
        class B extends M1.A<string> {
                           ~
!!! error TS2339: Property 'A' does not exist on type 'number'.
        }
    }
    namespace M3 {
        // Shouldn't error
        class B extends M1.A<string> {
        }
    }
    